[tool.poetry]
name = "vk_audio"
version = "0.1.0"
description = ""
authors = ["Almas Baktubayev"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
